Updating swagger and validators
